src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Standard - Opportunity Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Validated</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Name_Login_Id__c</fullName>
        <label>Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charged__c</fullName>
        <label>Charged?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Checked_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the supervisor who has checked this Order Save Opportunity</description>
        <label>Checked By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Order_Number__c</fullName>
        <label>Completed Order Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed__c</fullName>
        <description>Value selected by the supervisor to set if the Order Save opportunity has been checked.</description>
        <label>Confirmed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Confirmed</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Converted_to_3_pay__c</fullName>
        <label>Converted to 3-pay</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Converted_to_3_pay_del_del__c</fullName>
        <label>Converted to 3-pay</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <description>LZ Customer Id</description>
        <label>Customer ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Checked__c</fullName>
        <description>Date when this Order Save Opportunity was checked by the supervisor</description>
        <label>Date Checked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sold__c</fullName>
        <description>Date/Time of purchase -- used for orders where the customer&apos;s Terms of Service has not yet been accepted (&apos;TOS Pending&apos;) and the order is therefore on hold.</description>
        <label>Date Sold</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Abandoned__c</fullName>
        <description>To support IP Abandoner upload</description>
        <label>Date/Time Abandoned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Created_Adjusted__c</fullName>
        <description>Date/Time Created based on Central Time adjusted for Daylight Saving</description>
        <label>Date/Time Created Adjusted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Time_Created__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date/Time Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Last_Modified_Adjusted__c</fullName>
        <description>Date/Time Last Modified based on Central Time adjusted for Daylight Saving</description>
        <label>Date/Time Last Modified Adjusted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Time_Modified__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date/Time Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Questionaire_Started__c</fullName>
        <description>Store the date time info of when the questionaire is started.  For Abandoner use.</description>
        <label>Date Time Questionaire Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Since_Purchase__c</fullName>
        <formula>TODAY () - DATEVALUE(Date_Sold__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Purchase</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duplicated_Order_Save_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field look up to original opportunity that has the same order number.</description>
        <label>Duplicated Order Save Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Duplicated Order Save Opportunity)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Ownership__c</fullName>
        <label>First Ownership</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Has_Had_First_Ownership__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Had First Ownership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inbound_Outbound__c</fullName>
        <label>Inbound/Outbound</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offered_3_pay__c</fullName>
        <label>Offered 3-pay</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Call_Status__c</fullName>
        <description>Call status for opportunity - where are we at in the process of contacting the customer?</description>
        <label>Opportunity Call Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Message</fullName>
                </value>
                <value>
                    <fullName>Duplicate Customer/Already Logged</fullName>
                </value>
                <value>
                    <fullName>Already Purchased</fullName>
                </value>
                <value>
                    <fullName>Call Customer Back</fullName>
                </value>
                <value>
                    <fullName>Customer Will Call Back</fullName>
                </value>
                <value>
                    <fullName>VM - Attempt 1</fullName>
                </value>
                <value>
                    <fullName>NM - Attempt 2</fullName>
                </value>
                <value>
                    <fullName>NM - Attempt 3</fullName>
                </value>
                <value>
                    <fullName>NM - Attempt 4</fullName>
                </value>
                <value>
                    <fullName>VM - Final Attempt</fullName>
                </value>
                <value>
                    <fullName>Bad Number</fullName>
                </value>
                <value>
                    <fullName>Do Not Call</fullName>
                </value>
                <value>
                    <fullName>Sent Email</fullName>
                </value>
                <value>
                    <fullName>SNE</fullName>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>Contacted-SNE</fullName>
                </value>
                <value>
                    <fullName>Not Contacted-NM</fullName>
                </value>
                <value>
                    <fullName>Not Contacted-LVM/Email</fullName>
                </value>
                <value>
                    <fullName>Unable to Contact/Bad Number/NM</fullName>
                </value>
                <value>
                    <fullName>Response/Research Pending</fullName>
                </value>
                <value>
                    <fullName>Soft SNE</fullName>
                </value>
                <value>
                    <fullName>Hard SNE</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Updated by Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Opportunities (OpportunityCase)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Shown_on_Flow__c</fullName>
        <formula>TEXT(Product__c) &amp; &quot; Opportunity&quot; &amp; &quot; (&quot;&amp; 
if (ISBLANK(Product_Line_Text__c), TEXT(Product_Line__c), Product_Line_Text__c)
&amp; &quot;)&quot;&amp;BR() &amp; 
&quot;-----Status: &quot; &amp; TEXT(StageName) &amp; BR() &amp; 
&quot;-----Created: &quot;  &amp;  Date_Time_Created_Adjusted__c &amp; BR() &amp; 
&quot;-----Updated: &quot;  &amp;  Date_Time_Last_Modified_Adjusted__c   &amp; BR() &amp; 
&quot;-----Assigned: &quot; &amp;  Custom_Owner__r.FirstName &amp; &quot; &quot; &amp;  Custom_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Shown on Flow</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Source__c</fullName>
        <label>Opportunity Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Care Transfer</fullName>
                </value>
                <value>
                    <fullName>AM Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <description>Picklist to allow for agents to sort by opportunity type. Record Type will be a hidden field.</description>
        <label>Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chargebacks</fullName>
                </value>
                <value>
                    <fullName>Declines</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>TOS Pending</fullName>
                </value>
                <value>
                    <fullName>Abandoners</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>AS BAP Courtesy</fullName>
                </value>
                <value>
                    <fullName>RA Renewal</fullName>
                </value>
                <value>
                    <fullName>BAM Abandoner</fullName>
                </value>
                <value>
                    <fullName>Order Save</fullName>
                </value>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Pilot Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ownership_Date__c</fullName>
        <label>Ownership Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DBA</fullName>
                </value>
                <value>
                    <fullName>LLC</fullName>
                </value>
                <value>
                    <fullName>Incorporation</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line_2__c</fullName>
        <label>Product Line</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Intellectual Property</fullName>
                </value>
                <value>
                    <fullName>Personal Services</fullName>
                </value>
                <value>
                    <fullName>Attorney Services</fullName>
                </value>
                <value>
                    <fullName>Business Formations</fullName>
                </value>
                <value>
                    <fullName>Legal Forms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line_Text__c</fullName>
        <label>Product Line Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line (Obsolete)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Intellectual Property</fullName>
                </value>
                <value>
                    <fullName>Personal Services</fullName>
                </value>
                <value>
                    <fullName>Attorney Services</fullName>
                </value>
                <value>
                    <fullName>Business Formations</fullName>
                </value>
                <value>
                    <fullName>Legal Forms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Registered Agent</fullName>
                </value>
                <value>
                    <fullName>Registered Agent SOS</fullName>
                </value>
                <value>
                    <fullName>LLC</fullName>
                </value>
                <value>
                    <fullName>DBA</fullName>
                </value>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Attorney Consultation Requests</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Business Advantage Pro Standalone</fullName>
                </value>
                <value>
                    <fullName>Consultation Subscription</fullName>
                </value>
                <value>
                    <fullName>Consultation Subscription Renewal</fullName>
                </value>
                <value>
                    <fullName>Forms Subscription</fullName>
                </value>
                <value>
                    <fullName>Forms Subscription Renewal</fullName>
                </value>
                <value>
                    <fullName>Legal Advantage Plus Standalone</fullName>
                </value>
                <value>
                    <fullName>Legal Form</fullName>
                </value>
                <value>
                    <fullName>OCAA Plans</fullName>
                </value>
                <value>
                    <fullName>501(c)3 Preparation</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
                <value>
                    <fullName>Annual Reports</fullName>
                </value>
                <value>
                    <fullName>Bylaws &amp; Resolutions</fullName>
                </value>
                <value>
                    <fullName>Certificate of Good Standing</fullName>
                </value>
                <value>
                    <fullName>Certified Copies</fullName>
                </value>
                <value>
                    <fullName>Compliance Calendar</fullName>
                </value>
                <value>
                    <fullName>Compliance Calendar Renewal</fullName>
                </value>
                <value>
                    <fullName>Conversion</fullName>
                </value>
                <value>
                    <fullName>Corporate Dissolution</fullName>
                </value>
                <value>
                    <fullName>Corporate Minutes</fullName>
                </value>
                <value>
                    <fullName>EIN Obtainment</fullName>
                </value>
                <value>
                    <fullName>Entity Name Availability Check</fullName>
                </value>
                <value>
                    <fullName>Entity Name Reservation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Hot</fullName>
                </value>
                <value>
                    <fullName>2 - Warm</fullName>
                </value>
                <value>
                    <fullName>3 - Cold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Cancellation_Comment__c</fullName>
        <label>Reason for Cancellation Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Cancellation__c</fullName>
        <label>Reason for Cancellation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Could not afford / Price</fullName>
                </value>
                <value>
                    <fullName>Felt misled</fullName>
                </value>
                <value>
                    <fullName>Unaware of service</fullName>
                </value>
                <value>
                    <fullName>Changing RA to someone else</fullName>
                </value>
                <value>
                    <fullName>Not moving forward with Business</fullName>
                </value>
                <value>
                    <fullName>Too upset to listen</fullName>
                </value>
                <value>
                    <fullName>State Delays</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Add Comment</fullName>
                </value>
                <value>
                    <fullName>Past 60 Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temperature__c</fullName>
        <label>Temperature</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cold</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Hot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Order_ID__c</fullName>
        <externalId>true</externalId>
        <label>User Order ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AM_Rev_Opportunity_Queue</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Phone__c</columns>
        <columns>Opportunity_Source__c</columns>
        <columns>Product_Line_2__c</columns>
        <columns>Opportunity_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>aqueu</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost</value>
        </filters>
        <label>All - AM Rev Opportunities - Open</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Open_Order_Save</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Case__c</columns>
        <columns>Duplicated_Order_Save_Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>012G0000000s23y</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>All - Order Save - New</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Order_Save_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Business_Development_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>012G0000000qHGr</value>
        </filters>
        <label>All - Business Development Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <role>Business_Development_Team</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Confirmation_of_Decline_Leads_Sara</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Opportunity_Type__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Product_Line_2__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Date_Time_Created__c</columns>
        <columns>Phone__c</columns>
        <columns>User_Order_ID__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>auser</value>
        </filters>
        <label>Oppty Upload Confirmation - Today</label>
        <language>en_US</language>
        <sharedTo>
            <role>Sales_Reporting_Analyst</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Opportunity_Type__c</columns>
        <columns>Phone__c</columns>
        <columns>Product_Line_2__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Date_Time_Created__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>*My Opportunities - Open</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Closed_Order_Save</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Case__c</columns>
        <columns>Charged__c</columns>
        <columns>Confirmed__c</columns>
        <columns>Inbound_Outbound__c</columns>
        <columns>Duplicated_Order_Save_Opportunity__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>012G0000000s23y</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Lost,Not Order Save,Closed Won</value>
        </filters>
        <label>*My Order Saves - Closed</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Order_Save_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Decline_Opportunities_Open</fullName>
        <columns>Opportunity_Type__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Order_Number__c</columns>
        <columns>Phone__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>State__c</columns>
        <columns>Date_Time_Created__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>012G0000000qHQS</value>
        </filters>
        <label>*My Decline Opportunities - Open</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>VPSales</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Eligible_Opps</fullName>
        <booleanFilter>(1 OR 5) AND 2 AND 3 AND 4</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>State__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Opportunity_Call_Status__c</columns>
        <columns>Rating__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>User_Order_ID__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Standard_Opportunity,012G0000000qHQS,012G0000000qHZJ</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>New,Open,Closed Won,Greeted,Qualified,Presented</value>
        </filters>
        <filters>
            <field>Rating__c</field>
            <operation>notEqual</operation>
            <value>3 - Cold</value>
        </filters>
        <filters>
            <field>Opportunity_Call_Status__c</field>
            <operation>equals</operation>
            <value>Response/Research Pending,Soft SNE,Hard SNE</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>012G0000000qHij,012G0000000s23y,012G0000000sCfR,012G0000000sQZ6</value>
        </filters>
        <label>*My Eligible Opps - Biz Starter</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>VPSales</roleAndSubordinates>
        </sharedTo>
    </listViews>
</CustomObject>